Added article detail endpoint with swagger docs Swagger doc fixes for preferred article
