# routes/api.php
@@ -13,7 +13,10 @@ Route::post('reset-password', [AuthController::class, 'resetPassword'])->name('p
 
 Route::group(['middleware' => ['auth:sanctum']], function () {
     Route::post('logout', [AuthController::class, 'logout']);
-    Route::get('articles', [ArticleController::class, 'search']);
+    Route::group(['prefix' => 'articles'], function () {
+        Route::get('/', [ArticleController::class, 'search']);
+        Route::get('{articleId}', [ArticleController::class, 'details']);
+    });
     Route::get('preferred-articles', [ArticleController::class, 'preferred']);
 
     Route::group(['prefix' => 'user', 'controller' => UserController::class], function () {
